fixed label bleed over button

--- a/register.navfest.in/css/form.css
+++ b/register.navfest.in/css/form.css
@@ -149,6 +149,10 @@ input::placeholder{
 }
 
 @media screen and (max-width:900px){
+    .details{
+
+        display: none;
+    }
     .form-landing-img-left{
         display: none;
     }
